--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@
 }
 
 /*********************** colors and fonts *************************/
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 h2,
 h3,
 h4,
@@ -26,9 +29,26 @@ span {
   font-weight: 200;
 }
 
-p {
+p,
+.attribution {
   color: var(--Grayish-Blue);
   font-size: 15px;
+}
+
+.supervisor {
+  border-top: 4px solid var(--Cyan);
+}
+
+.team-builder {
+  border-top: 4px solid var(--red);
+}
+
+.karma {
+  border-top: 4px solid var(--Orange);
+}
+
+.calculator {
+  border-top: 4px solid var(--Blue);
 }
 
 /*********************** Heading*****************************/
@@ -37,6 +57,7 @@ html {
   padding: 0;
   height: 100vh;
 }
+
 body {
   padding: 0;
   margin: 0;
@@ -47,7 +68,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: hsl(0, 0%, 98%);
+  background-color: var(--Very-Light-Gray);
   overflow-y: hidden;
 }
 
@@ -92,8 +113,8 @@ main > div {
 .card {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  box-shadow: 0 10px 25px -10px hsl(229, 6%, 66%);
+  width: 400px;
+  box-shadow: 0 10px 25px -10px var(--Very-Dark-Blue);
   border-radius: 0.5em;
   padding: 30px;
 }
@@ -101,28 +122,12 @@ main > div {
 .card > p {
   font-weight: 200;
   font-size: 1em;
-  color: hsl(234, 12%, 34%);
+  color: var(--Very-Dark-Blue);
 }
 
 .card > img {
   align-self: flex-end;
   margin-top: 1em;
-}
-
-.supervisor {
-  border-top: 4px solid hsl(180, 62%, 55%);
-}
-
-.team-builder {
-  border-top: 4px solid hsl(0, 78%, 62%);
-}
-
-.karma {
-  border-top: 4px solid hsl(34, 97%, 64%);
-}
-
-.calculator {
-  border-top: 4px solid hsl(212, 86%, 64%);
 }
 
 .card > h2 {
